<resources>
    <string name="app_name">Kentucky Fried Chicken</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="user">Usuario:</string>
    <string name="contraseña">Contraseña:</string>
    <string name="registrarse">Registrarse</string>
    <string name="ingresar">Ingresar</string>
    <string name="concontraseña">Confirmar Contraseña:</string>
    <string name="correo">Correo Electronico:</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="vacio">Campo Vacio</string>
    <string name="diferentecontra">Contraseñas Distintas</string>
    <string name="bucket7">Bucket 7 Presas</string>
    <string name="descripcion_bucket7">7 Deliciosas Presas De Pollo KFC</string>
    <string name="megavariedad">Mega Variedad</string>
    <string name="descripcion_megavariedad">6 Presas,6 Hot Wings,4 Strips,4 Arepas,1 Pop Corn de 6 Oz,1 Papas Grandes</string>
    <string name="megaeconomico">Mega Economico</string>
    <string name="descripcion_megaeconomico">8 Presas,8 Arepas</string>
    <string name="megasinigual">Mega Sin Igual</string>
    <string name="descripcion_megasinigual">8 Presas, 2 Papas Medianas</string>
    <string name="megafutbolero">Mega Futbolero</string>
    <string name="descripcion_megafutbolero">11 Presas, 11 Alitas</string>
    <string name="mega1">Mega1</string>
    <string name="descripcion_mega1">9 Presas, 1 Papas Grandes, 1 Ensalada Grande</string>
    <string name="mega2">Mega2</string>
    <string name="descripcion_mega2">12 Presas, 1 Papas Grandes, 1 Ensalada Grande</string>
    <string name="megahot">Mega Hot Wings</string>
    <string name="descripcion_megahot">25 Alitas Picantes, 6 Arepas y Salsas</string>
    <string name="megapop">Mega Pop Corn</string>
    <string name="descripcion_megapop">6 Presas, Pop Corn Familiar, 1 Papas Grandes, 8 Arepas</string>
    <string name="disfrutapollo">¡Disfruta De Nuestros Pollos!</string>
    <string name="disfrutarefres">¡Disfruta De Nuestros Refrescos!</string>
    <string name="disfruta">¡Disfruta De Nuestras Comidas!</string>
    <string name="disfrutasandwich">¡Disfruta De Nuestros Sandwiches!</string>
    <string name="doublicious">Doublicious</string>
    <string name="refrescos">Refrescos</string>
    <string name="descripcion_refrescos">¿Sediento? Una bebida carbonatada es la manera perfecta de acompañar la comida perfecta. Elija entre una variedad de bebidas refrescantes y heladas.</string>
    <string name="limonada">Limonada</string>
    <string name="descripcion_limonada">Cuando la vida le da limones, póngalos en un vaso y diga "¡Gracias, vida!", y beba toda su bebida porque a todos nos encanta la refrescante Limonada Clásica Dole.</string>
    <string name="tea">Te Helado</string>
    <string name="descripcion_tea">El té helado del Coronel es un complemento fresco para una comida caliente. Igualmente refrescante en sus dos formas: dulce y sin endulzar.</string>
    <string name="chicken_littles">Chicken Littles</string>
    <string name="descripcion_chicken_littles">Tiernos trozos de pollo empanizados, que se sirven con pepinillos y mayonesa en un nuevo pan con semillas de sésamo.</string>
    <string name="descripcion_doublicious">Pechuga de pollo sin hueso con la Receta Original del Coronel, cubierta con tocino, queso Monterey Jack y salsa, servida en un pan dulce hawaiano.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="encontrar">¿Donde Nos Puedes Encontrar?</string>
    <string name="volver">Volver</string>
    <string name="abierto">Open Navigation Drawer</string>
    <string name="cerrado">Close Navigation Drawer</string>
</resources>
