<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/red"
    tools:context="com.kfc.julianalmanza.kfc.Registrarse">

    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_marginTop="30sp"
        android:layout_gravity="center"
        android:src="@drawable/usuario"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:textSize="18sp"
        android:textColor="@color/ivory"
        android:text="@string/user"
        android:layout_gravity="center"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:textColor="@color/white"
        android:id="@+id/usuario_registrar"
        android:textSize="17sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13sp"
        android:textSize="18sp"
        android:textColor="@color/ivory"
        android:text="@string/contraseña"
        android:layout_gravity="center"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:id="@+id/contraseña_registrar"
        android:layout_marginRight="15sp"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:textSize="17sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13sp"
        android:textSize="18sp"
        android:textColor="@color/ivory"
        android:text="@string/concontraseña"
        android:layout_gravity="center"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:id="@+id/confirmar_contraseña"
        android:layout_marginRight="15sp"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:textSize="17sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13sp"
        android:textSize="18sp"
        android:textColor="@color/ivory"
        android:text="@string/correo"
        android:layout_gravity="center"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:id="@+id/correo"
        android:textColor="@color/white"
        android:layout_marginRight="15sp"
        android:textSize="17sp"
        android:inputType="textEmailAddress"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:text="@string/aceptar"
            android:textSize="25sp"
            android:id="@+id/aceptar_registro"
            android:typeface="monospace"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:textSize="25sp"
            android:id="@+id/cancelar_registro"
            android:typeface="monospace"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            />

    </LinearLayout>

</LinearLayout>
